plugins {
    id 'java'
    id 'org.springframework.boot' version '4.1.0'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'io.freefair.lombok' version '9.5.0'
}

group = 'net.likelion.bebc25'
version = '0.0.1-SNAPSHOT'
description = 'spring-board'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-h2console'
    implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-webmvc'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'com.mysql:mysql-connector-j'
    runtimeOnly 'com.h2database:h2'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
    // -XX:+EnableDynamicAgentLoading: JDK 21+ 환경에서 런타임 자바 에이전트(Byte Buddy)의 바이트코드 변조 명시적 허용
    // -Xshare:off: 테스트 런타임 중 동적 에이전트 추가로 발생하는 JVM 클래스 데이터 공유(CDS, Class Data Sharing) 메모리 맵 비활성화
    jvmArgs('-XX:+EnableDynamicAgentLoading', '-Xshare:off')
}
